--- a/invaders.vcxproj.filters
+++ b/invaders.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="src\World.h">
       <Filter>src\Engine</Filter>
     </ClInclude>
+    <ClInclude Include="src\Config.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
