Added stars and enemies

--- a/invaders.vcxproj
+++ b/invaders.vcxproj
@@ -171,19 +171,23 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Actor.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Projectile.cpp" />
+    <ClCompile Include="src\Star.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Actor.h" />
     <ClInclude Include="src\Config.h" />
+    <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Projectile.h" />
+    <ClInclude Include="src\Star.h" />
     <ClInclude Include="src\World.h" />
   </ItemGroup>
   <ItemGroup>
