--- a/invaders.vcxproj.filters
+++ b/invaders.vcxproj.filters
@@ -19,6 +19,10 @@
     <ClCompile Include="src\Player.cpp">
       <Filter>src\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="src\Enemy.cpp">
+      <Filter>src\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Star.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -50,6 +54,10 @@
     <ClInclude Include="src\Player.h">
       <Filter>src\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="src\Enemy.h">
+      <Filter>src\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Star.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
