--- a/invaders.vcxproj.filters
+++ b/invaders.vcxproj.filters
@@ -22,7 +22,15 @@
     <ClCompile Include="src\Enemy.cpp">
       <Filter>src\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="src\Star.cpp" />
+    <ClCompile Include="src\Star.cpp">
+      <Filter>src\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Timer.cpp">
+      <Filter>src\Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TimerTask.cpp">
+      <Filter>src\Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -57,7 +65,15 @@
     <ClInclude Include="src\Enemy.h">
       <Filter>src\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="src\Star.h" />
+    <ClInclude Include="src\Star.h">
+      <Filter>src\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Timer.h">
+      <Filter>src\Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TimerTask.h">
+      <Filter>src\Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
