--- a/invaders.vcxproj
+++ b/invaders.vcxproj
@@ -172,6 +172,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Enemy.cpp" />
+    <ClCompile Include="src\EnemySpawn.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Actor.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
@@ -186,6 +187,7 @@
     <ClInclude Include="src\Actor.h" />
     <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Enemy.h" />
+    <ClInclude Include="src\EnemySpawn.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Projectile.h" />
