--- a/invaders.vcxproj
+++ b/invaders.vcxproj
@@ -173,6 +173,7 @@
   <ItemGroup>
     <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\EnemySpawn.cpp" />
+    <ClCompile Include="src\HUD.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Actor.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
@@ -189,6 +190,7 @@
     <ClInclude Include="src\Emitter.h" />
     <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\EnemySpawn.h" />
+    <ClInclude Include="src\HUD.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\Projectile.h" />
